# DatabaseProject

./: .gitignore  CMakeLists.txt  DatabaseProject.sln  README.md  build.bat  run.bat
raylib/: AddPlayer.c  AddPlayer.h  AddUser.c  AddUser.h  AssignCivilization.c  AssignCivilization.h  BuildCity.c  CheckIfReady.c  CheckIfReady.h  DatbaseProject.c  DrawWindow.c  GameSession.h  GetCivilizations.c  GetCivilizations.h  GetCurrentDate.h  GetMaps.c  GetPoliticalDivision.c  GetPoliticalDivision.h  GetProvinceInformation.c  GetProvinceInformation.h  GetProvinces.c  GetProvinces.h  GetTerrain.c  GetTerrain.h  GetUsers.c  GetUsers.h  GridTileDef.c  GridTileDef.h  LoadingScreen.c  LoadingScreen.h  Player.h  Province.h  ProvinceTextures.c  ProvinceTextures.h  RemovePlayer.h  ShowPlayer.c  ShowPlayer.h  UpdateCurrentDate.c  cityBox.c  countryBox.c  (+37 more)
source/: position.h
source/GridTile/: GridTileDef.c  GridTileDef.h
source/additions/drawMenuElement/: drawMenuElement.c  drawMenuElement.h
source/additions/inputBox/: inputBox.c
source/additions/modifyBackgroundColor/: modifyBackgroundColor.c
source/query/: query.c
source/query/Game Session/: CheckIfReady.c  GetBuildingType.c  GetCityConstructionDate.c  GetCurrentDate.c  UpdateCurrentDate.c  createGameSession.c  getGameSessions.c
source/query/Map/GetDimensions/: getDimensions.c
source/query/Map/GetMaps/: GetMaps.h
source/query/Player/: AddPlayer.c  RemovePlayer.c
source/query/SessionOrMap/GetCivilizations/: GetCivilizations.c
source/query/SessionOrMap/GetPoliticalDivision/: GetPoliticalDivision.h
source/query/SessionOrMap/Province/GetProvinces/: GetProvinces.c  GetProvinces.h
source/query/Terrain/: GetTerrain.c
source/query/User/: GetUsers.c  User.h  logInQuery.c
source/state/: cube.c  gameSetup.c  loadGame.c  pause.c  play.c  playerList.c  register.c
source/state/play/: buildingBox.c  drawTopLayer.c  errorLayer.c  map.c  play.h  provinceBox.c
sql/: BuildAndTest.sql
sql/Create/: Constraints.sql  ForeignKeys.sql  Functions.sql  Procedures.sql  Tables.sql  Triggers.sql
sql/Insert/: BuildingTypes.sql  DiplomacyState.sql  Map.sql
